--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "react-dom": "17.0.1"
   },
   "devDependencies": {
-    "autoprefixer": "^10.0.2",
     "@babel/plugin-syntax-jsx": "^7.12.1",
     "@babel/preset-react": "^7.12.7",
     "@testing-library/jest-dom": "^5.11.6",
@@ -24,9 +23,11 @@
     "@types/react": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "^4.8.1",
     "@typescript-eslint/parser": "^4.8.1",
+    "autoprefixer": "^10.0.2",
     "eslint": "^7.14.0",
     "husky": "^4.3.0",
     "jest": "^26.6.3",
+    "lint-staged": "^10.5.1",
     "postcss": "^8.1.9",
     "postcss-nested": "^5.0.1",
     "postcss-preset-env": "^6.7.0",
