--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@headlessui/react": "^0.2.0",
     "next": "10.0.2",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "sass": "^1.29.0"
   },
   "devDependencies": {
     "@babel/plugin-syntax-jsx": "^7.12.1",
